change all the background images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
     <section class="back_img2">
       <div class="back_text">
-        <span class="center_text">Explore Nature</span>
+        <span class="center_text">Dark Nights</span>
       </div>
     </section>
 
@@ -54,7 +54,7 @@
 
     <section class="back_img3">
       <div class="back_text">
-        <span class="center_text">More Nature</span>
+        <span class="center_text">Dark Cities</span>
       </div>
     </section>
     <section class="text1 text2">
